--- a/src/styles/DarkMode.css
+++ b/src/styles/DarkMode.css
@@ -1,42 +1,37 @@
-
-.dark_mode {
-    display: flex;
-    align-items: center;
-    margin-right: 5px;
-}
-
-.dark_mode_label {
-    width: 40px;
-    height: 25px;
-    position: relative;
-    display: block;
-    background: #ebebeb;
-    border-radius: 200px;
-background-color: var(--main-color);
-    cursor: pointer;
-    transition: 0.3s;
-}
-.dark_mode_label:after {
-    content: "";
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 3px;
-    left: 3px;
-    background: white;
-    border-radius: 180px;
-    transition: 0.3s;
-}
-.dark_mode_input {
-    width: 0;
-    height: 0;
-    position: absolute;
-    visibility: hidden;
-}
-.dark_mode_input:checked + .dark_mode_label {
-    background: var(--secondary-color);
-}
-.dark_mode_input:checked + .dark_mode_label:after {
-    left: 37px;
-    transform: translateX(-100%);
-}
+ 
+.switch label {
+      display: inline-block;
+      position: relative;
+      width: 40px;
+      height: 22px;
+      border-radius: 20px;
+      background: var(--main-color);
+      transition: background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      vertical-align: middle;
+      cursor: pointer;
+  }
+  .switch label::before {
+      content: '';
+      position: absolute;
+      top: 1px;
+      left: 2px;
+      width: 20px;
+      height: 20px;
+      background: #fafafa;
+      border-radius: 50%;
+      transition: left 0.28s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .switch label:active::before {
+      box-shadow: 0 2px 8px rgba(0,0,0,0.28), 0 0 0 20px rgba(128,128,128,0.1);
+  }
+ .switch input:checked + label {
+      background: var(--secondary-color);
+  }
+ .switch input:checked + label::before {
+      left: 17px;
+      background: #fff;
+      
+  }
+ .switch input:checked + label:active::before {
+      box-shadow: 0 2px 8px rgba(0,0,0,0.28), 0 0 0 20px rgba(0,150,136,0.2);
+  }
